# gnss-signal-simulator-rs

./: .gitignore  AGENTS.md  CACHE_OPTIMIZATION_REPORT.md  CLAUDE.md  Cargo.toml  FILE_STATUS.md  README.md  TODO_ANALYSIS.md  TODO_PERFORMANCE_FIXES.md  ble_gnss_logger.py  compare_rust_cpp.py  config.json  debug_output.txt  test_ephemeris_search.rs  test_ephemeris_search_basic  test_ephemeris_search_basic.rs  test_ephemeris_search_simple.rs  test_rinex_validation.rs  test_rinex_validation_simple  verify_signal_enhanced.py
android/: settings.gradle.kts
docs/: gnss_icd_conformance_report.md  verification_report.md  verification_sources.md
examples/: cache_optimization_demo.rs
generated_files/: GPS_L1_only_10s.C8
presets/: BDS_B1C_Only.json  BDS_B1I_B1C_dual.json  BDS_B1I_Only.json  BDS_B2I_B2b_dual.json  BDS_B2a_only.json  BDS_B2b_only.json  BDS_B3I_only.json  GAL_E1_only.json  GAL_E5a_only.json  GAL_E5b_only.json  GLO_G1_G3_dual.json  GLO_G1_only.json  GLO_G1_test_polarity.json  GLO_G2_only.json  GLO_G3_only.json  GPS_BDS_GAL_GLO_L1G1_46MHz.json  GPS_BDS_GAL_L1_5MHz.json  GPS_BDS_GAL_L1_5MHz_china.json  GPS_BDS_GAL_L1_B1I_18MHz.json  GPS_BDS_GAL_L1_B1I_21MHz.json  GPS_BDS_GAL_L5E5aB2a_24MHz.json  GPS_BDS_GAL_test_1s.json  GPS_BDS_GAL_test_levels.json  GPS_BDS_GAL_triple_system.json  GPS_L1C_test.json  GPS_L1_only.json  GPS_L2C_L2P_test.json  GPS_L2C_test.json  GPS_L2P_test.json  GPS_L5_only.json  GPS_L5_test_10s.json  Galileo_E1_test.json  Multi_L2_Band_22MHz_Minimal.json  Multi_L2_Band_24MHz.json  Multi_L2_Band_all.json  moscow_l1_300s.json  (+7 more)
src/: almanac.rs  (+52 more)
(+42 files in other folders)
