[package]
name = "gnss_rust"
version = "0.1.0"
edition = "2021"
default-run = "gnss_rust"

[lib]
doctest = false

[[bin]]
name = "spectrum_analyzer"
path = "src/bin/spectrum_analyzer.rs"

[[bin]]
name = "nav_diagnostics"
path = "src/bin/nav_diagnostics.rs"

[[bin]]
name = "gps_pilot"
path = "src/bin/gps_pilot.rs"

[[bin]]
name = "gnss_pilot"
path = "src/bin/gnss_pilot.rs"

[[bin]]
name = "decode_iq"
path = "src/bin/decode_iq.rs"

[dependencies]
rand = "0.8"
rayon = "1.8"
wide = "0.7"  # SIMD векторизация
serde_json = "1.0"  # JSON parsing
# МАКСИМАЛЬНОЕ АППАРАТНОЕ УСКОРЕНИЕ: GPU + AVX-512  
cudarc = { version = "0.11", features = ["f16", "cuda-12050"], optional = true }

[features]
default = []
gpu = ["cudarc"]
avx512 = []

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "abort"
# КРИТИЧЕСКИЕ ФЛАГИ ДЛЯ МАКСИМАЛЬНОЙ ПРОИЗВОДИТЕЛЬНОСТИ
[profile.release.build-override]
opt-level = 3

[[bin]]
name = "nav_dump"
path = "src/bin/nav_dump.rs"
